Add result API
